--- a/Frontend/Product-management/src/Pages/Password/Password.module.css
+++ b/Frontend/Product-management/src/Pages/Password/Password.module.css
@@ -1,4 +1,5 @@
-.loginWrapper {
+.forgotPasswordWrapper,
+.resetPasswordWrapper {
 	min-width: 100vw;
 	min-height: 100vh;
 	display: flex;
@@ -12,7 +13,7 @@
 	height: auto;
 }
 
-.login {
+.Container {
 	position: absolute;
 	top: 30vh;
 	left: 30vh;
@@ -29,7 +30,7 @@
 	font-family: "Inter", sans-serif;
 	font-size: 28px;
 	font-weight: bold;
-	color: #333;
+	color: rgba(77, 170, 86);
 	margin-bottom: 10px;
 }
 
@@ -39,35 +40,30 @@
 
 .headings p {
 	font-family: "Inter", sans-serif;
-	font-size: 22px;
+	font-size: 15px;
 	font-weight: normal;
 	color: #555;
 	margin-bottom: 30px;
 	text-align: center;
 }
 
-.name {
-	font-family: "Inter", sans-serif;
-	color: rgb(77, 170, 87);
-}
-
 .inputWrapper {
 	margin-bottom: 20px;
 }
 
-.inputContainer {
+.inputForm {
 	display: flex;
 	flex-direction: column;
 	margin-bottom: 15px;
 }
 
-.inputContainer label {
+.inputForm label {
 	font-size: 14px;
 	color: #333;
 	margin-bottom: 5px;
 }
 
-.inputContainer input {
+.inputForm input {
 	padding: 10px;
 	font-size: 14px;
 	border: 1px solid #ccc;
@@ -75,7 +71,7 @@
 	transition: border 0.3s ease;
 }
 
-.inputContainer input:focus {
+.inputForm input:focus {
 	border: 1px solid rgb(77, 170, 87);
 	outline: none;
 }
@@ -92,26 +88,17 @@
 	margin-top: 5px;
 }
 
-.forgotPassword {
-	margin-top: 10px;
-	text-align: right;
-}
-
-.forgotPassword a {
-	font-size: 12px;
-	color: rgb(77, 170, 87);
-	text-decoration: none;
-}
-
-.forgotPassword a:hover {
-	text-decoration: underline;
-}
-
-.buttonContainer {
+.btn {
 	margin-top: 20px;
 }
 
-.signIn {
+.Container .icon {
+	color: #2e2e3f;
+	margin-right: 5px;
+}
+
+.forgotPasswordBtn,
+.resetPasswordBtn {
 	width: 100%;
 	padding: 12px;
 	background-color: rgb(77, 170, 87);
@@ -124,11 +111,12 @@
 	transition: background-color 0.3s ease;
 }
 
-.signIn:hover {
+.forgotPasswordBtn:hover,
+.resetPasswordBtn:hover {
 	background: #3d924d;
 }
 
-.registerLink {
+.BackToLogin {
 	display: block;
 	text-align: center;
 	margin-top: 20px;
@@ -137,6 +125,6 @@
 	font-size: 14px;
 }
 
-.registerLink:hover {
+.BackToLogin:hover {
 	text-decoration: underline;
 }
