--- a/Frontend/Product-management/src/Pages/Products/Products.module.css
+++ b/Frontend/Product-management/src/Pages/Products/Products.module.css
@@ -1,25 +1,27 @@
 .detailsWrapper {
 	display: flex;
-	max-height: 100%;
-	background-color: #f8f9fa;
-	padding: 20px;
+	min-height: 100vh;
+	justify-content: space-between;
+	align-items: center;
+	background-color: #f2f2f2;
+	padding: 0 60px;
 }
 
-.detailsContainer {
-	background-color: white;
-	border-radius: 10px;
-	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-	overflow: hidden;
-	max-width: 600px;
+.detailsContainer span {
+	position: absolute;
+	top: 20px;
+	font-size: 30px;
 }
 
-.productDetails {
-	padding: 50px;
+.producImage {
+	position: relative;
+	left: 20vh;
 }
 
-.productDetails .image {
-	width: 32vh;
-	height: 30vh;
+.producImage .image {
+	position: relative;
+	width: 70vh;
+	height: 60vh;
 	text-align: center;
 }
 
@@ -29,26 +31,39 @@
 	border-radius: 10px;
 }
 
+.productDetails {
+	position: absolute;
+	top: 50px;
+	width: 100%;
+}
+
 .productTitle {
 	font-size: 24px;
 	margin: 15px 0;
 	color: #333;
 }
 
-.productDescription {
-	font-size: 16px;
-	margin: 10px 0;
-	color: #666;
-}
-
 .productPrice {
 	font-size: 20px;
 	font-weight: bold;
 	color: #28a745;
-	margin: 10px 0;
+	margin: 0px;
 }
 
 .productCategory {
-	font-size: 16px;
+	font-size: 17px;
+	font-weight: 600;
 	margin: 10px 0;
+	color: #666;
+}
+
+.productSales {
+	width: 50%;
+	padding: 30px;
+	text-align: center;
+	border-radius: 10px;
+}
+
+.Sale {
+	box-shadow: 0 2px 6px rgba(77, 170, 86, 0.767);
 }
