--- a/Frontend/Product-management/src/Pages/Register/Registration.module.css
+++ b/Frontend/Product-management/src/Pages/Register/Registration.module.css
@@ -4,18 +4,18 @@
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	background-image: url("Images/backround image.jpg");
+	background-image: url("Images/backround image.png");
 	background-position: center;
 	background-repeat: no-repeat, repeat;
 	background-size: cover;
 	max-width: 100%;
-	height: auto;
+	height: 10vh;
 }
 
 .formContainer {
 	position: absolute;
-	left: 40px;
-	width: 40%;
+	left: 200px;
+	width: 30%;
 	padding: 40px;
 	border-radius: 10px;
 	background: white;
@@ -69,7 +69,7 @@ h2 {
 }
 
 .inputContainer input {
-	width: 480px;
+	width: 530px;
 	padding: 10px;
 	border: none;
 	border-radius: 4px;
@@ -84,7 +84,7 @@ h2 {
 
 .flexContainer input {
 	padding: 10px;
-	width: 210px;
+	width: 250px;
 	border: none;
 	border-radius: 4px;
 	margin-top: 5px;
@@ -110,22 +110,8 @@ h2 {
 	color: #f2f2f2;
 }
 
-.termsConditions {
-	display: flex;
-	align-items: center;
-	font-size: 13px;
-	color: #2e2e3f;
-}
-
-.buttonContainer {
-	grid-column: 1 / 3;
-	display: flex;
-	align-items: center;
-	margin-top: 20px;
-}
-
 .registerBtn {
-	width: 40%;
+	width: 47%;
 	padding: 12px;
 	margin-right: 15px;
 	background-color: rgb(77, 170, 87);
@@ -143,7 +129,7 @@ h2 {
 }
 
 .loginBtn {
-	width: 40%;
+	width: 47%;
 	padding: 12px;
 	background-color: rgb(77, 170, 87);
 	color: white;
