--- a/Frontend/Product-management/src/Pages/Navigation/SideNav.module.css
+++ b/Frontend/Product-management/src/Pages/Navigation/SideNav.module.css
@@ -1,24 +1,21 @@
 .menu {
 	width: 420px;
 	background: #f8f9fa;
-	content: "";
 	display: flex;
 	flex-direction: column;
-	height: 100vh;
+	min-height: 100vh;
 }
 
 .sideNav {
 	width: 350px;
 	display: flex;
 	flex-direction: column;
-	flex-grow: 1;
-	justify-content: center;
+	height: 90.5vh;
 }
 
 .logo img {
-	width: 300px;
-	height: 150px;
-	margin-bottom: 30px;
+	width: 350px;
+	height: 250px;
 }
 
 .logout {
@@ -38,7 +35,7 @@
 	margin-left: 10px;
 	margin-right: 10px;
 	border-radius: 10px;
-	color: black;
+	color: rgb(28, 56, 32);
 	background-color: #f8f9fa;
 }
 
