--- a/Frontend/Product-management/src/Pages/ProductSales/ProductSales.module.css
+++ b/Frontend/Product-management/src/Pages/ProductSales/ProductSales.module.css
@@ -1,16 +1,24 @@
 .salesWrapper {
 	display: flex;
+	min-width: 100vh;
 	min-height: 100vh;
-	background-color: #f5f5f5;
-	font-family: "Poppins", sans-serif;
 }
 
 .salesContainer {
-	flex-grow: 1;
-	padding: 20px;
+	content: "";
+	flex: 10;
+	height: 100vh;
 	display: flex;
+	flex-direction: column;
+}
+
+.salesContent {
+	position: relative;
+	top: 10vh;
+	display: flex;
+	flex-direction: column;
 	justify-content: center;
-	align-items: flex-start;
+	align-items: center;
 }
 
 .salesTable {
@@ -41,7 +49,7 @@ th {
 }
 
 td {
-	color: rgb(51, 51, 51);
+	color: rgb(28, 55, 32);
 }
 
 .saleDisplay:nth-child(even) {
@@ -84,18 +92,22 @@ td {
 }
 
 .pagination li {
-  margin: 0 5px;
-  padding: 5px 10px;
-  cursor: pointer;
+	margin: 0 5px;
+	padding: 5px 10px;
+	cursor: pointer;
+  color: rgb(28, 55, 32);
 }
 
 .pagination li:hover {
-  background-color: #f1f1f1;
+	background: rgba(77, 170, 86, 0.612);
+	color: white;
+	font-weight: 600;
+	border-radius: 5px;
 }
 
 .activePage {
-  background-color: #4daa57;
+	background: rgb(77, 170, 87);
 	border-radius: 5px;
-  color: black;
-  font-weight: bold;
+	color: rgb(28, 55, 32);
+	font-weight: bold;
 }
