--- a/Frontend/Product-management/src/Pages/Password/Password.module.css
+++ b/Frontend/Product-management/src/Pages/Password/Password.module.css
@@ -1,11 +1,12 @@
 .forgotPasswordWrapper,
-.resetPasswordWrapper {
+.resetPasswordWrapper,
+.changePasswordWrapper {
 	min-width: 100vw;
 	min-height: 100vh;
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	background-image: url("Images/backround image.png");
+	background-image: url("Images/background image.png");
 	background-position: center;
 	background-repeat: no-repeat, repeat;
 	background-size: cover;
@@ -54,7 +55,7 @@
 .inputForm {
 	display: flex;
 	flex-direction: column;
-	margin-bottom: 15px;
+	margin-bottom: 5px;
 }
 
 .inputForm label {
@@ -79,7 +80,7 @@
 .errorMessage {
 	font-size: 12px;
 	color: red;
-	margin-top: 5px;
+	margin: 10px 0px;
 }
 
 .successMessage {
