--- a/Frontend/Product-management/src/Pages/Home/Home.module.css
+++ b/Frontend/Product-management/src/Pages/Home/Home.module.css
@@ -3,7 +3,7 @@
 	top: 70px;
 	left: 420px;
 	display: flex;
-	min-width: 100%;
+	flex-direction: column;
 	min-height: 100vh;
 }
 
@@ -13,7 +13,8 @@
 	flex-direction: column;
 	align-items: center;
 	background: rgba(226, 225, 225, 0.637);
-	width: 80%;
+	width: 152.7vh;
+	height: 106vh;
 }
 
 .search {
@@ -28,7 +29,7 @@
 	background-position: center;
 	background-repeat: no-repeat, repeat;
 	background-size: cover;
-	width: 75%;
+	width: 70%;
 	margin: 20px 0px;
 }
 
@@ -90,7 +91,7 @@
 	grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
 	border-radius: 5px;
 	gap: 20px;
-	width: 90%;
+	width: 80%;
 	margin-top: 20px;
 }
 
@@ -193,7 +194,7 @@ p {
 }
 
 .activePage {
-	background-color: #4daa57;
+	background: rgb(77, 170, 87);
 	border-radius: 5px;
 	color: rgb(28, 55, 32);
 	font-weight: bold;
