--- a/Frontend/Product-management/src/Pages/Navigation/TopNav.module.css
+++ b/Frontend/Product-management/src/Pages/Navigation/TopNav.module.css
@@ -1,5 +1,6 @@
 .topNavWrapper {
-	position: relative;
+  /* position: relative;
+  left:20vh; */
 	display: flex;
 	justify-content: flex-end;
 }
@@ -38,12 +39,13 @@
 	gap: 10px;
 	font-family: "Poppins", sans-serif;
 	font-weight: 500;
-	font-size: 15px;
+	font-size: 20px;
 	border: none;
 	border-radius: 4px;
 	background: rgb(255, 255, 255);
 	color: rgb(15, 60, 76);
 	cursor: pointer;
+	border-radius: 5px;
 }
 
 .topNavIcons {
@@ -52,20 +54,21 @@
 
 .profile {
 	position: absolute;
-	justify-content: end;
 	background: white;
 	width: 200px;
 	height: 96x;
-	top: 30px;
+	top: 80px;
 	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-	right: 25px;
+	left: 50vh;
+	z-index: 3;
+	
 }
 
 .profile p {
 	font-family: "Poppins", sans-serif;
-	font-size: 13px;
+	font-size: 15px;
 	font-weight: 600;
-	color:rgb(28, 56, 32);
+	color: rgb(28, 56, 32);
 	padding: 15px;
 	cursor: pointer;
 	text-align: center;
@@ -80,9 +83,9 @@
 	border: none;
 	background: white;
 	font-family: "Poppins", sans-serif;
-	font-size: 13px;
+	font-size: 15px;
 	font-weight: 600;
-	color: rgb(15, 60, 76);
+	color: rgb(28, 56, 32);
 	padding: 15px;
 	width: 200px;
 	cursor: pointer;
